# Firmware.HRTIM-Test

./: CMakeLists.txt
CubeMX/F334-Test/: .mxproject  F334-Test.ioc  Makefile
CubeMX/F334-Test/Core/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
CubeMX/F334-Test/Core/Src/: gpio.c  hrtim.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  usart.c
Inc/: clock.hpp  main_cycle.hpp  utils.hpp
Src/: clock.cpp  main.cpp  main_cycle.cpp  syscalls.c  utils.cpp
